# adventofcode

./: .gitignore  README.md  pyproject.toml
2015/: .gitignore  day_1.py  day_3.py  day_4.py  test_day_2.py  test_day_3.py
2015/day_1/: day_1.py
2015/day_10/: day_10.py  notes.md  test_day_10.py
2015/day_11/: day_11.py  test_day_11.py
2015/day_12/: day_12.py  test_day_12.py
2015/day_13/: day_13.py  test_day_13.py
2015/day_14/: day_14.py
2015/day_15/: day_15.py  day_15_2.py  test_day_15.py  test_day_15_2.py
2015/day_2/: day_2.py  test_day_2.py
2015/day_3/: day_3.py  test_day_3.py
2015/day_4/: day_4.py
2015/day_5/: day_5.py  test_day_5.py
2015/day_6/: day_6.py  test_day_6.py
2015/day_7/: day_7.py  day_7_3.py  test_day_7.py
2015/day_8/: day_8.py  test_day_8.py
2015/day_9/: day_9.py  test_day_9.py
2021/: day_1.py  day_10.py  day_2.py  day_3.py  day_3_test.py  day_4.py  day_5.py  day_6.py  day_8.py  day_9.py  test_day_10.py  test_day_3.py  test_day_5.py  test_day_6.py  test_day_9.py
2021/day_1/: day_1.py
2021/day_10/: day_10.py  test_day_10.py
2021/day_11/: day_11.py  test_day_11.py
2021/day_12/: day_12.py  test_day_12.py
2021/day_13/: day_13.py
2021/day_14/: day_14.py  test_day_14.py
2021/day_15/: day_15.py
2021/day_2/: day_2.py
2021/day_3/: day_3.py  test_day_3.py
2021/day_4/: day_4.py  test_day_4.py
2021/day_5/: day_5.py  test_day_5.py
2021/day_6/: day_6.py  test_day_6.py
2021/day_7/: day_7.py
2022/: day_3.py  day_4.py  test_day_3.py
hannukah_of_data/: day_1.ipynb  day_2.ipynb
template/: day.py
(+74 files in other folders)
