[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pylint>=4.0.4",
    "pytest>=9.0.1",
    "regex>=2025.11.3",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings.
# Supports Markdown, reStructuredText code/literal blocks and doctests.
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "single"
indent-style = "tab"